// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobListActions> renders correctly for configurable jobs 1`] = `
<DropdownButton
  component={
    <FlyoutMenu
      dataTest="dhis2-uicore-menu"
      maxHeight="auto"
      maxWidth="380px"
    >
      <EditJobMenuItem
        id="1"
      />
      <RunJobMenuItem
        id="1"
      />
      <DeleteJobMenuItem
        id="1"
      />
    </FlyoutMenu>
  }
  dataTest="dhis2-uicore-dropdownbutton"
  small={true}
>
  Actions
</DropdownButton>
`;

exports[`<JobListActions> renders correctly for non configurable jobs 1`] = `
<DropdownButton
  component={
    <FlyoutMenu
      dataTest="dhis2-uicore-menu"
      maxHeight="auto"
      maxWidth="380px"
    >
      <RunJobMenuItem
        id="1"
      />
      <DeleteJobMenuItem
        id="1"
      />
    </FlyoutMenu>
  }
  dataTest="dhis2-uicore-dropdownbutton"
  small={true}
>
  Actions
</DropdownButton>
`;
